code refactors for overflow:hidden to overflow:clip and rental description padding corrections

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 
 html {
   margin-right: calc(-1 * (100vw - 100%)); /* Prevents page from adjusting when scrollbar is present or not */
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 * {
